[gd_scene load_steps=39 format=3 uid="uid://j4rcwwnpmwyi"]

[ext_resource type="Script" path="res://mods-unpacked/Raffa-HydraLauncher/extensions/content/gadgets/hydralauncher/HydraMissileExplosion.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cw14yc22iv8mr" path="res://content/weapons/artillery/artydome_flak_impact_1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://5xuybf18gcnf" path="res://content/effects/explosions/smoke32x32px_sheet.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cf4711n0uomqm" path="res://content/shared/explosions/explosions-Sheet.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b3xhlg1v8pnc3" path="res://content/shared/explosions/explosions-Sheet_shaded.png" id="5"]
[ext_resource type="Script" path="res://content/keeper/keeper2/CustomStyle_ChangeModulate.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dwjv7ym4jdvor" path="res://content/gadgets/teleporter/teleport_startup_energy.png" id="7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_7iwwp"]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="64"]
max_value = 1.5
_data = [Vector2(0, 1.5), 0.0, 0.0, 0, 0, Vector2(0.184293, 1.00756), 0.0, 0.0, 0, 0, Vector2(1, 0.996269), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="62"]
curve = SubResource("64")

[sub_resource type="Gradient" id="65"]
offsets = PackedFloat32Array(0, 0.281337, 0.62117, 1)
colors = PackedColorArray(0.313726, 1, 0.392157, 1, 0.282353, 0.792157, 0.392157, 1, 0.25098, 0.521569, 0.392157, 1, 0.188235, 0.427451, 0.392157, 0)

[sub_resource type="GradientTexture1D" id="56"]
gradient = SubResource("65")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8elne"]
lifetime_randomness = 0.8
particle_flag_disable_z = true
angle_min = -360.0
angle_max = 360.0
direction = Vector3(-1, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 90.0
angular_velocity_min = -150.0
angular_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -30.0
linear_accel_max = -30.0
damping_min = 50.0
damping_max = 50.0
scale_min = 0.7
color_ramp = SubResource("56")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("62")
anim_offset_max = 0.5

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("2")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("2")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("2")
region = Rect2(128, 0, 64, 32)

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}],
"loop": false,
"name": &"Impact",
"speed": 36.0
}]

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("5")
region = Rect2(0, 104, 199, 104)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("5")
region = Rect2(199, 104, 199, 104)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("5")
region = Rect2(398, 104, 199, 104)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("5")
region = Rect2(597, 104, 199, 104)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("5")
region = Rect2(796, 104, 199, 104)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("5")
region = Rect2(995, 104, 199, 104)

[sub_resource type="AtlasTexture" id="47"]
atlas = ExtResource("5")
region = Rect2(1194, 104, 199, 104)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("4")
region = Rect2(1120, 0, 56, 52)

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("5")
region = Rect2(0, 0, 199, 104)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("5")
region = Rect2(199, 0, 199, 104)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("5")
region = Rect2(398, 0, 199, 104)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("5")
region = Rect2(597, 0, 199, 104)

[sub_resource type="AtlasTexture" id="52"]
atlas = ExtResource("5")
region = Rect2(796, 0, 199, 104)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("5")
region = Rect2(995, 0, 199, 104)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("5")
region = Rect2(1194, 0, 199, 104)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("4")
region = Rect2(1120, 0, 56, 52)

[sub_resource type="SpriteFrames" id="67"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}, {
"duration": 1.0,
"texture": SubResource("47")
}, {
"duration": 1.0,
"texture": SubResource("37")
}],
"loop": false,
"name": &"Big",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}, {
"duration": 1.0,
"texture": SubResource("51")
}, {
"duration": 1.0,
"texture": SubResource("52")
}, {
"duration": 1.0,
"texture": SubResource("53")
}, {
"duration": 1.0,
"texture": SubResource("54")
}, {
"duration": 1.0,
"texture": SubResource("38")
}],
"loop": false,
"name": &"Small",
"speed": 18.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_strbn"]
light_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Curve" id="69"]
_data = [Vector2(0, 0.445455), 0.0, 0.0, 0, 0, Vector2(1, 0.990909), 1.26061, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="70"]
curve = SubResource("69")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ao3vq"]
particle_flag_disable_z = true
angle_min = -360.0
angle_max = 360.0
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_min = 0.7
scale_max = 0.7
scale_curve = SubResource("70")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_offset_max = 1.0

[node name="HydraMissileExplosion" type="Node2D"]
script = ExtResource("1")

[node name="Particles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_7iwwp")
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_8elne")
texture = ExtResource("3")
lifetime = 1.5
one_shot = true
explosiveness = 1.0

[node name="BulletImpact" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(2, 0)
sprite_frames = SubResource("4")
animation = &"Impact"
frame = 2
frame_progress = 1.0
offset = Vector2(-26, 0)

[node name="ExplosionSmall" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-53, 1)
rotation = -3.1011
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("67")
animation = &"Small"

[node name="StunParticle" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.615686, 0.372549, 1)
material = SubResource("CanvasItemMaterial_strbn")
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ao3vq")
texture = ExtResource("7")
lifetime = 0.3
one_shot = true
explosiveness = 0.5
script = ExtResource("6")
self_init = true
styleColor = Color(0.345098, 1, 0.392157, 1)

[connection signal="animation_finished" from="BulletImpact" to="." method="_on_BulletImpact_animation_finished"]
